--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "friendfinder",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Friend Finder App",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Justin Kunz",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
